2005-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Cleaned up quite a lot of whitespace at the end of
	lines. Fixed a bug calling the setNick proc via after sometimes.

2005-02-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added /afk, /away and /back commands to set the
	presence. Each can take a string to use for an additional display
	string. 
	Added support for handling subscription requests.
	Fixed a bug in the color handling to cope with invalid colors.

2005-01-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed overly aggressive reconnection when user has
	logged out manually. Implemented STARTTLS and SASL authentication.
	Fixed a problem with the userinfo dialog raising an error.
	Added a -connect option to the app to facilitate connection via an
	alternate server (eg: tkchat -connect localhost:5222)

2004-12-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::logonScreen): Tidied up the key navigation
	for the login screen.

2004-12-17  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Schizophrenia is supported again.
        
2004-12-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Put some of the http error handling code back in so
	we get a message when the history server is unavailable.

2004-12-13  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Bug fixes for UserInfo. 

2004-12-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Support UserInfo via the Jabber vcard iq.

2004-12-08  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Prevent multiple reconnect timers running at the same time.

2004-12-08  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::parseStr): Simplified the URL parsing
	regexp and added support for ftp URLs. It is much more relaxed in
	what it accepts as an URL now, and only tries hard to get the end
	right.
 
2004-12-08  Pascal Scheffers  <pascal@scheffers.net>
